# macos-quick-cleaner

./: LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: cache.rs  developer.rs  duplicates.rs  large_files.rs  leftovers.rs  mod.rs  system_info.rs
src-tauri/src/scanners/: app_data_scanner.rs  app_scanner.rs  cache_scanner.rs  file_scanner.rs  hash_scanner.rs  mod.rs
src/components/CacheCleanup/: CacheCleanup.tsx
src/components/Dashboard/: Dashboard.tsx
src/components/DeveloperTools/: DeveloperTools.tsx
src/components/Duplicates/: Duplicates.tsx
src/components/LargeFiles/: LargeFiles.tsx
src/components/LeftoverFiles/: LeftoverFiles.tsx
src/components/common/: ConfirmDialog.tsx  ProgressOverlay.tsx  Sidebar.tsx  Toast.tsx
src/hooks/: useFormatters.ts
src/hooks/__tests__/: useFormatters.test.ts
src/stores/: appStore.ts
src/stores/__tests__/: appStore.test.ts
src/styles/: index.css
src/test/: setup.ts
src/types/: index.ts
